--- a/index.html
+++ b/index.html
@@ -23,5 +23,25 @@
       I'm an enthusiastic and motivated Junior Front-End Developer. I'm interested in building user-friendly interfaces and understanding customer needs. My tech stack includes HTML, CSS, SCSS, JavaScript, React, Redux, Webpack, REST APIs, and Git.
     </p>
   </div>
+  <div class="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Git</li>
+      <li>SQL</li>
+      <li>React</li>
+      <li>Redux</li>
+    </ul>
+  </div>
+  <div class="code-example">
+    <h2>Code example</h2>
+    <pre>
+      function addNumbers(a, b) {
+        return a + b;
+      }
+    </pre>
+  </div>
 </body>
 </html>
