feat: add styling to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -42,6 +43,31 @@
         return a + b;
       }
     </pre>
+  </div>
+  <div class="education">
+    <ul>
+      <li>Donetsk national university
+        <ul>
+          <li>Management</li>
+        </ul>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <ul>Gromcode
+          <li>Front-End</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <div class="languages">
+    <h2>Languages</h2>
+    <ul>
+      <li>Russian - native speaker</li>
+      <li>Ukrainian - fluent</li>
+      <li>English - B2</li>
+      <li>German - A2</li>
+    </ul>
   </div>
 </body>
 </html>
